changed stylesheet path

--- a/buttons.html
+++ b/buttons.html
@@ -13,7 +13,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   
-  <link rel="stylesheet" href="../../compass/lenzo/stylesheets/lenzo.css" type="text/css" charset="utf-8" >
+  <link rel="stylesheet" href="stylesheets/lenzo.css" type="text/css" charset="utf-8" >
   <link href='http://fonts.googleapis.com/css?family=Oswald&v1' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/documentation.css" type="text/css" charset="utf-8">
   
