--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
  
+  <meta name="author" content="vieron">
  
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   
-  <link rel="stylesheet" href="../../compass/lenzo/stylesheets/lenzo.css" type="text/css" charset="utf-8" >
+  <link rel="stylesheet" href="stylesheets/lenzo.css" type="text/css" charset="utf-8" >
   <link href='http://fonts.googleapis.com/css?family=Oswald&v1' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="stylesheets/documentation.css" type="text/css" charset="utf-8">
   
