fixes in general

--- a/grids.html
+++ b/grids.html
@@ -30,17 +30,17 @@
   
   <div class="wrapper">
     <div class="header line">
-  <div class="unit s1of5">
+  <div class="unit s1of2">
     <a href="index.html" class="logo">
       <img src="images/logo.gif" alt="lanzo.css">
-      <span>Cross-browser Modular CSS Framework</span>
+      <span>Experimental Cross-browser Modular CSS Framework</span>
     </a>
   </div><!-- .unit s1of5 -->
 </div><!-- .header wrapper -->
     
     <div id="content">
       <div class="unit_txt s1of1 mvl">
-  <h1>Grids</h1>
+  <h1>Grids (no clearfix, no overflow hidden)</h1>
   <h2>For text (with inner margin)</h2>
 </div>
 
