--- a/structures.html
+++ b/structures.html
@@ -30,10 +30,10 @@
   
   <div class="wrapper">
     <div class="header line">
-  <div class="unit s1of5">
+  <div class="unit s1of2">
     <a href="index.html" class="logo">
       <img src="images/logo.gif" alt="lanzo.css">
-      <span>Cross-browser Modular CSS Framework</span>
+      <span>Experimental Cross-browser Modular CSS Framework</span>
     </a>
   </div><!-- .unit s1of5 -->
 </div><!-- .header wrapper -->
